Prevent automatic collapsing of tagset dropdowns on tag attach

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3083,7 +3083,7 @@ fieldset[disabled] a.btn {
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
   color: #000;
-  background-color: #e6e6e6;
+  background-color: #FFE97F;
   border-color: #adadad;
 }
 .btn-default:active:not(.nohover):hover,
